--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
       <footer>
         <div>
-          <img src="images/foot.png" alt="">
+          <span>Mahmoud Lotfy</span>
         </div>
       </footer>
     </div>
