--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img src="images/imgs.png" alt="" />
         </div>
       </div>
-      <div class="book">
+      <div class="book animate__animated animate__zoomIn animate__fast">
         <div class="img ">
           <img src="images/book.png" alt="">
         </div>
@@ -77,7 +77,7 @@
             <span>يتوفر قريباً</span>
         </div>
       </div>
-      <div class="banner">
+      <div class="banner animate__animated animate__zoomIn animate__fast">
         <div class="img">
           <img src="images/banner.png" alt="">
         </div>
@@ -88,7 +88,7 @@
             <span>يتوفر قريباً</span>
         </div>
       </div>
-      <div class="paper">
+      <div class="paper animate__animated animate__zoomIn animate__fast">
         <div class="img ">
           <img src="images/paper.png" alt="">
         </div>
